--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ vars.DOCKERHUB_USERNAME }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
       - name: Set up Docker Buildx
@@ -26,4 +26,4 @@ jobs:
         with:
           platforms: linux/amd64,linux/arm64
           push: true
-          tags: ${{ vars.DOCKERHUB_USERNAME }}/webfs:latest,${{ vars.DOCKERHUB_USERNAME }}/webfs:${{ github.sha }}
+          tags: ${{ vars.DOCKERHUB_BRANCH_NAME }}/webfs:latest,${{ vars.DOCKERHUB_BRANCH_NAME }}/webfs:${{ github.sha }}
