--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,6 +12,15 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Set up Rust
+        run: |
+          cargo install cargo-get
+
+      - name: Get current version
+        run: |
+          VERSION=$(cargo get package.version)
+          echo "VERSION=$VERSION" >> $GITHUB_ENV
+
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
@@ -26,4 +35,4 @@ jobs:
         with:
           platforms: linux/amd64,linux/arm64
           push: true
-          tags: ${{ vars.DOCKERHUB_BRANCH_NAME }}/webfs:latest,${{ vars.DOCKERHUB_BRANCH_NAME }}/webfs:${{ github.sha }}
+          tags: ${{ vars.DOCKERHUB_BRANCH_NAME }}/webfs:latest,${{ vars.DOCKERHUB_BRANCH_NAME }}/webfs:${{ env.VERSION }}
